--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.tomcat.uri-encoding=UTF-8
 spring.application.name=springboot-highcharts-demo
 spring.devtools.restart.exclude=static/**
 spring.devtools.restart.additional-exclude=static/**,public/**
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java
 spring.profiles.active=dev
 spring.session.store-type=none
 
